styles: move font-family to root and fix cards width and alignhment with header

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,15 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  background-color: #F6F6F6;
+}
+
 #root {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
