--- a/src/Components/Card.module.css
+++ b/src/Components/Card.module.css
@@ -1,10 +1,8 @@
 .article {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 30rem;
-  box-shadow: 0 1px 7px -4px rgba(0, 0, 0, 0.75);
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 25rem;
+  box-shadow: 0px -1px 7px -5px rgba(0, 0, 0, 0.75);
   border-radius: 5px;
 }
 
@@ -26,7 +24,7 @@
 .articleBody {
   padding: 1rem;
   overflow: scroll;
-  height: 60%;
+  height: 45%;
   color: #465467;
 }
 
@@ -45,12 +43,12 @@
 
 @media (min-width: 420px) {
   .article {
-    width: 45%;
+    flex-basis: 45%;
   }
 }
 
 @media (min-width: 768px) {
   .article {
-    width: 30%;
+    flex-basis: 30%;
   }
 }
