--- a/src/Components/NoResults.module.css
+++ b/src/Components/NoResults.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 3rem;
-  font-family: "Roboto", sans-serif;
 }
 
 h5 {
